# gateway-controllers

./: Makefile
.github/: policy-categories.txt
.github/ISSUE_TEMPLATE/: publish-policy.yml
.github/policies/: policy-options.json
.github/scripts/: generate_policy_inputs.py  parse_issue_form.py
.github/workflows/: complete-policy-registration.yml  gateway-integration-test.yml  pr-checks.yml  publish-policy-from-issue.yml  publish-policy.yml  release-policy.yml  sync-policy-dropdown.yml
docs/: README.md
policies/advanced-ratelimit/: apiname_scope_sharing_test.go  cel_evaluator.go  cost_extractor.go  cost_extractor_test.go  policy-definition.yaml  ratelimit.go  ratelimit_integration_test.go  redis_clients.go  redis_clients_test.go
policies/analytics-header-filter/: analyticsheaderfilter_test.go  go.sum
policies/api-key-auth/: apikey.go  apikey_test.go  go.mod  go.sum  policy-definition.yaml
policies/aws-authentication/: aws_authentication.go  aws_authentication_test.go  go.mod  go.sum  policy-definition.yaml
policies/aws-bedrock-guardrail/: awsbedrockguardrail.go  awsbedrockguardrail_test.go  go.mod  policy-definition.yaml
policies/azure-content-safety-content-moderation/: azurecontentsafetycontentmoderation.go  azurecontentsafetycontentmoderation_test.go  go.mod  policy-definition.yaml
policies/backend-jwt/: backendjwt.go  backendjwt_test.go  go.mod  policy-definition.yaml
policies/basic-auth/: basicauth.go  basicauth_test.go  go.mod  policy-definition.yaml
policies/basic-ratelimit/: basic_ratelimit.go  basic_ratelimit_test.go  go.mod  go.sum  policy-definition.yaml
policies/content-length-guardrail/: contentlengthguardrail.go  contentlengthguardrail_test.go  go.mod
policies/cors/: cors.go  cors_test.go  policy-definition.yaml
policies/dynamic-endpoint/: dynamicendpoint.go
policies/granite-guardian-prompt-injection/: policy-definition.yaml  pyproject.toml
policies/granite_guardian_prompt_injection/: policy-definition.yaml  pyproject.toml
policies/granite_guardian_prompt_injection/src/granite_guardian_prompt_injection_v1/: __init__.py
policies/granite_guardian_prompt_injection/tests/: test_policy.py
policies/interceptor-service/: go.mod  interceptorservice.go  interceptorservice_test.go  policy-definition.yaml
policies/json-schema-guardrail/: go.mod  jsonschemaguardrail.go  jsonschemaguardrail_test.go
policies/json-to-xml/: go.mod
policies/json-xml-mediator/: jsonxmlmediation.go  jsonxmlmediation_test.go  policy-definition.yaml
policies/jwt-auth/: go.mod  go.sum  header_snapshot.go  jwtauth.go  jwtauth_hardening_test.go  jwtauth_test.go  jwtauth_tokencache_test.go  policy-definition.yaml
policies/llm-cost/: llm_cost.go  llm_cost_test.go  (+1 more)
policies/llm-cost-based-ratelimit/: go.mod  go.sum  llm_cost_based_ratelimit.go  llm_cost_based_ratelimit_test.go  policy-definition.yaml
policies/prompt-compressor/: README.md  policy.py  pyproject.toml  requirements.txt  test_policy.py
policies/prompt-compressor/src/prompt_compressor_v0/: policy.py
policies/prompt-compressor/tests/: test_policy.py
scripts/: generate-policy-catalog.py
(+229 files in other folders)
