[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "granite-guardian-prompt-injection-v1"
version = "1.0.0"
description = "WSO2 AI Gateway Granite Guardian prompt injection policy for the Python executor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/granite_guardian_prompt_injection_v1"]

[tool.hatch.build.targets.wheel.force-include]
"policy-definition.yaml" = "granite_guardian_prompt_injection_v1/policy-definition.yaml"

[tool.hatch.build.targets.sdist]
only-include = [
  "src/granite_guardian_prompt_injection_v1",
  "pyproject.toml",
  "policy-definition.yaml",
  "README.md",
]