[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-compressor-v0"
version = "0.1.0"
description = "WSO2 AI Gateway prompt compression policy for the Python executor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "WSO2" }
]
dependencies = [
  "compression-prompt==0.1.2",
]

[tool.hatch.build.targets.wheel]
only-include = [
  "policy.py",
  "__init__.py",
  "policy-definition.yaml",
]

[tool.hatch.build.targets.wheel.sources]
"" = "prompt_compressor_v0"
